# test_u8_upgrade

./: Cargo.toml  README.md  dfx.json  script.sh
src/test_u8_upgrade_backend/: Cargo.toml  test_u8_upgrade_backend.did
src/test_u8_upgrade_backend/src/: lib.rs  post_upgrade.rs  pre_upgrade.rs
