[package]
name = "test_u8_upgrade_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.15"
ic-cdk-timers = "0.9" # Feel free to remove this dependency if you don't need timers
ic-stable-structures = "0.6.2"
serde = "1.0.186"
# pocket-ic = "2.1.0"
ic-cdk-macros = "0.15"
ciborium = "0.2.1"

# pocket-ic = "3.1.0"
